--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>History Quiz</title>
+    <link rel="stylesheet" href="/quiz.css">
 </head>
 <body>
-  <div class="container"> <!-- Renamed from .div to .container -->
-    <form action="">
-      <div class="form-div">
-        <input type="text" id="username" class="form-input" placeholder=" " />
-        <label for="username" class="form-label">Username</label> 
+  <div class="container">
+    <h1>History Quiz</h1>
+    <div id="quiz-container">
+      <div id="question-container">
+        <div id="question">Question text</div>
+        <div id="answer-buttons" class="btn-container">
+          <button class="btn">Answer 1</button>
+          <button class="btn">Answer 2</button>
+          <button class="btn">Answer 3</button>
+          <button class="btn">Answer 4</button>
+        </div>
       </div>
-      <div class="form-div">
-        <input type="text" id="username" class="form-input" placeholder=" " />
-        <label for="username" class="form-label">Email</label> 
-      </div>
-      <div class="form-div">
-        <input type="text" id="username" class="form-input" placeholder=" " />
-        <label for="username" class="form-label">Password</label> 
-
-      </div>
-      <button class="form-btn">Submit</button>
-    </form>
+      <button id="next-btn" class="btn">Next</button>
+    </div>
   </div>
+  <script src="/script.js"></script>
 </body>
 </html>
